--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,34 +8,64 @@
     padding-top: 100px;
 }
 
-  * {
-    box-sizing: border-box;
-  }
+.Content {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 2px;
+  border: 3px solid #00a652;
+}
+
+* {
+  box-sizing: border-box;
+}
   
-  a {
-    color: #bec9c9;
-    transition: color ease-in-out 0.3s;
-  }
+a {
+  color: #bec9c9;
+  transition: color ease-in-out 0.3s;
+}
   
-  a:hover {
-    color: #00a652;
-    text-decoration: none;
-  }
+a:hover {
+  color: #00a652;
+  text-decoration: none;
+}
   
-  a:hover i {
-    color: #00a652;
-    transition: color ease-in-out 0.3s;
-  }
+a:hover i {
+  color: #00a652;
+  transition: color ease-in-out 0.3s;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+i {
+  color: #bec9c9;
+  font-size: 2rem;
+  padding: 8px;
+  vertical-align: middle;
+}
   
-  i {
-    color: #bec9c9;
-    font-size: 2rem;
-    padding: 8px;
-    vertical-align: middle;
-  }
-  
-  i:hover {
-    cursor: pointer;
-    transition: color ease-in-out 0.3s;
-    color: #00a652;
-  }
+i:hover {
+  cursor: pointer;
+  transition: color ease-in-out 0.3s;
+  color: #00a652;
+}
+
+figure {
+  text-align: center;
+  display: inline-block;
+}
+
+/* A nicer Scrollbar */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: #e5e5e5;
+}
+*::-webkit-scrollbar-thumb {
+  background: #999;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #00a652;
+}
