--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,6 +15,12 @@
   border: 3px solid #00a652;
 }
 
+.Image {
+  max-height: 40vh;
+  max-width: 100%;
+  object-fit: contain;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -49,6 +55,11 @@ i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
   color: #00a652;
+}
+
+figure {
+  text-align: center;
+  display: inline-block;
 }
 
 /* A nicer Scrollbar */
