--- a/src/styles/RecentlyUpdatedIssues.module.css
+++ b/src/styles/RecentlyUpdatedIssues.module.css
@@ -1,8 +1,11 @@
-.Spacer {
-  margin-left: 10px;
-}
-
-.Time {
-  margin-left: 10px;
-  color: #bec9c9;  
+.Header {
+  font-family: "Merriweather", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #00a652;
+  padding-bottom: 10px;
 }
