--- a/src/styles/Issue.module.css
+++ b/src/styles/Issue.module.css
@@ -1,6 +1,6 @@
 .Issue {
   background-color: #ffffff;
-  border: 3px solid #00a652;
+  border: 3px solid #008542;
   border-radius: 5px;
   margin-bottom: 10px;
   text-align: center;
