--- a/src/styles/Journal.module.css
+++ b/src/styles/Journal.module.css
@@ -1,5 +1,5 @@
 .Time {
-  color: #00a652;
+  color: #008542;
 }
 
 p {
@@ -8,6 +8,6 @@ p {
 }
 
 hr {
-  border: 1px solid #00a652;
+  border: 1px solid #008542;
 }
 
