--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .NavBar {
     background-color: #ffffff;
-    border-bottom: 3px solid #00a652;
+    border-bottom: 3px solid #008542;
   }
 
 .NavLink {
@@ -8,9 +8,9 @@
   }
 
 .Active {
-    color: #00a652;
+    color: #008542;
   }
 
 .Active i {
-    color: #00a652;
+    color: #008542;
   }
