--- a/src/styles/RecentlyUpdatedIssues.module.css
+++ b/src/styles/RecentlyUpdatedIssues.module.css
@@ -6,6 +6,6 @@
   text-align: center;
   letter-spacing: 0.05em;
   text-transform: uppercase;
-  color: #00a652;
+  color: #008542;
   padding-bottom: 10px;
 }
