--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -10,7 +10,7 @@
   text-align: center;
   letter-spacing: 0.15em;
   text-transform: uppercase;
-  color: #00a652;
+  color: #008542;
   padding-bottom: 10px;
 }
   
